# hecatonquiros

./: .gitignore  .travis.yml  CMakeLists.txt  Examples.html  README.md  _arm4_do_f_8h_source.html  _arm_8h_source.html  _arm_vis_8h_source.html  _backend_8h_source.html  _backend_arduino_8h_source.html  _backend_gazebo_8h_source.html  _model_solver_8h_source.html  _model_solver_open_rave_8h_source.html  _model_solver_ros_8h_source.html  _model_solver_simple4_dof_8h_source.html  _positioner_8h_source.html  _positioner_vis_8h_source.html  _uav_vis_8h_source.html  annotated.html  class_arm-members.html  class_arm.html  class_arm_vis-members.html  class_arm_vis.html  class_positioner-members.html  class_positioner.html  class_positioner_vis-members.html  class_positioner_vis.html  class_uav_vis-members.html  class_uav_vis.html  classes.html  classhecatonquiros_1_1_arm4_do_f-members.html  classhecatonquiros_1_1_arm4_do_f.html  classhecatonquiros_1_1_backend-members.html  classhecatonquiros_1_1_backend.html  classhecatonquiros_1_1_backend__inherit__graph.map  classhecatonquiros_1_1_backend__inherit__graph.md5  classhecatonquiros_1_1_backend_arduino-members.html  classhecatonquiros_1_1_backend_arduino.html  classhecatonquiros_1_1_backend_arduino__coll__graph.md5  classhecatonquiros_1_1_backend_arduino__inherit__graph.map  (+80 more)
arm_controller/: CMakeLists.txt  Doxyfile.in  package.xml
arm_controller/config/: arm_4dof.kinbody.xml  arm_4dof.robot.xml  arm_4dof.xml  arm_gripper_5dof.kinbody.xml  arm_gripper_5dof.robot.xml  arm_gripper_6dof.kinbody.xml  arm_gripper_6dof.robot.xml  arm_manipulator_5dof.xml  config_arm1.xml  config_arm2.xml  dual_arm_manipulator_5dof.env.xml  dual_arm_manipulator_6dof.env.xml  gripper_2dof.kinbody.xml  gripper_2dof_0.kinbody.xml  gripper_serial_strong_0dof.kinbody.xml  positioner.env.xml  positioner.kinbody.xml
arm_controller/doc/: mainpage.dox
arm_controller/examples/: CMakeLists.txt
arm_controller/include/arm_controller/: Arm.h  Arm3DoF.h  Arm4DoF.h  Positioner.h
arm_controller/include/arm_controller/backends/: Backend.h  BackendArduino.h  BackendGazebo.h
arm_controller/include/arm_controller/model_solvers/: ModelSolver.h  ModelSolverOpenRave.h  ModelSolverRos.h  ModelSolverSimple4Dof.h
arm_controller/include/arm_controller/visualization/: ArmVis.h  PositionerVis.h  UavVis.h
arm_controller/include/hecatonquiros/: Arm4DoF.h  Positioner.h
arm_controller/include/hecatonquiros/backends/: Backend.h  BackendArduino.h  BackendFeetech.h  BackendFeetechQueueThread.h  BackendGazebo.h  BackendROS.h
arm_controller/include/hecatonquiros/model_solvers/: ModelSolver.h  ModelSolverOpenRave.h  ModelSolverRos.h  ModelSolverSimple4Dof.h
arm_controller/include/hecatonquiros/visualization/: ArmVis.h  PositionerVis.h
arm_controller/model/arm4dof/: arm_0_attachment.stl  arm_0_bottom.stl  arm_0_bottom_top_lock.stl  arm_1.stl  arm_2_microservo.stl  end_effector_connector.stl
arm_controller/model/gripper0dof_strong/: ScrewActuatorGripperCenter.stl
arm_controller/model/gripper2dof/: barMini.stl  base_gripper.stl  core_structure.stl
arm_controller/model/gripper3dof/: base_gripper.stl  middle_joint.stl
arm_controller/model/positioner/: bar0.stl  bar1.stl  bar2.stl  bar3.stl  bar4.stl  bar5.stl
arm_controller/python/: arm_server.py  dual_arm_env.py  load_model.py  load_positioner.py  math_utils.py
arm_controller/src/: Arm.cpp  Arm3DoF.cpp  Arm4DoF.cpp  Positioner.cpp
arm_controller/src/backends/: Backend.cpp  BackendArduino.cpp  BackendFeetech.cpp  BackendFeetechQueueThread.cpp  BackendGazebo.cpp  BackendROS.cpp  joint_name_detector  joint_name_detector.cpp
arm_controller/src/backends/dep/: SCServo.cpp
arm_controller/src/model_solvers/: ModelSolver.cpp  ModelSolverOpenRave.cpp  ModelSolverRos.cpp  ModelSolverSimple4Dof.cpp
arm_controller/src/visualization/: ArmVis.cpp  PositionerVis.cpp  UavVis.cpp
arm_controller/srv/: SetPose.srv
arm_controller/test/: TestModelSolverSimple4Dof.cpp
arm_controller/tools/calibration_feetech/: CMakeLists.txt
arm_tester/: CMakeLists.txt  package.xml
arm_tester/src/: main.cpp
calibration_feetech/: CMakeLists.txt  package.xml
calibration_feetech/octave/: plot_lineal_regression.m
calibration_feetech/src/: main.cpp
joystick_controller/: CMakeLists.txt  package.xml
modules/hecatonquiros/: CMakeLists.txt  Doxyfile.in
modules/hecatonquiros/cmake/modules/: FindSerial.cmake
modules/hecatonquiros/config/: arm_4dof.kinbody.xml  arm_4dof_3dof.kinbody.xml  arm_gripper_5dof.kinbody.xml  arm_gripper_6dof.robot.xml  arm_gripper_6dof_3dof.robot.xml  arm_gripper_6dof_4dof.robot.xml  arm_gripper_6dof_4dof_strong.robot.xml  config_arm1.xml  dual_arm_manipulator_5dof.env.xml  dual_arm_manipulator_6dof.env.xml  empty.env.xml  gripper_1dof.kinbody.xml  gripper_2dof.kinbody.xml  single_arm_manipulator_4dof.env.xml
modules/hecatonquiros/include/hecatonquiros/: Arm4DoF.h  Positioner.h
modules/hecatonquiros/launch/: controller_dual_ros.launch
modules/hecatonquiros/model/arm4dof/: arm_0_attachment.stl  arm_0_top.stl  arm_1_case.stl
modules/hecatonquiros/model/gripper0dof_strong/: case_core.stl  core_attachment.stl
modules/hecatonquiros/model/gripper2dof/: bar.stl  core_structure.stl
modules/hecatonquiros/model/gripper3dof/: attachment.stl  bar.stl  gripper.stl
modules/hecatonquiros/python/: Backend.py  BackendSerial.py  ModelSolver.py
modules/hecatonquiros/python/hecatonquiros/: ArmEnv.py  ModelSolver.py  ModelSolverOR.py  example_env_openai.py  learning_DDPG.py  qlearning.py  qlearning_predict.py  sample_train.hdf5  test_arm.py  test_ppo.py
modules/hecatonquiros/src/: Positioner.cpp
modules/hecatonquiros/src/backends/: Backend.cpp  BackendArduino.cpp  BackendFeetech.cpp
tools/serialPort_multi_arms_controller/: CMakeLists.txt
tools/serialPort_multi_arms_controller/config/: config_arms_serialPort_4dof.json  config_manipulator_controller_4dof_right.json
tools/serialPort_multi_arms_controller/src/: IndividualBackend.cpp  IndividualBackend.h  MultiArmsController.cpp  MultiArmsController.h  main.cpp
(+871 files in other folders)
